--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@native-html/transient-render-engine": "^11.2.3",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
     "axios": "^1.2.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-webview": "^11.26.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
